<resources>
    <string name="app_name">Weekuk</string>
    <string name="next">NEXT</string>
    <string name="start">GET STARTED</string>
    <string name="txt_login_email">Email</string>
    <string name="txt_login_pwd">Password</string>
    <string name="txt_login_confpwd">Confirm Password</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_signup">SIGN UP</string>
    <string name="txt_forgotlogin_gethelptxt">Forgot your Password? Get help <a href="actual url">Signing in</a></string>
    <string name="txt_or">OR</string>
    <string name="txt_accntsignup">Don\'t have an account? <a href="actual url">Sign up</a></string>
    <string name="txt_contactsupport">Trouble Signing Up?<a href="actual url">Contact Support</a></string>
    <string name="txt_alreadysignin">Already have an account <a href="actual url">Sign in</a></string>
    <string name="facebook_app_id">224934658167885</string>
    <string name="fb_login_protocol_scheme">fb224934658167885</string>
    <string name="txt_fblogin">Log in with Facebook</string>
    <string name="txt_googlelogin">Log in with Google</string>

    <string name="tnc">TERMS &amp; CONDITIONS</string>
    <string name="txt_cancel">CANCEL</string>
    <string name="tncfullText">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida, nisi non fringilla volutpat, diam velit ultrices est, sed vulputate nunc neque eget neque. Integer semper dui at turpis tempus vulputate. Cras a ex purus. Ut tincidunt dui non eros accumsan elementum. Nulla in interdum quam. Phasellus malesuada sagittis justo sit amet euismod. Curabitur sollicitudin leo sit amet tempor ultrices. Pellentesque tempor diam massa, at fermentum augue aliquam porttitor. Maecenas et risus sit amet enim hendrerit venenatis vel non mi. In dolor sem, ullamcorper ut leo sed, vehicula efficitur arcu. Aliquam congue lacus ut mauris elementum, finibus viverra felis imperdiet. Curabitur hendrerit mi ac lectus porta, quis vehicula leo aliquam. Cras bibendum urna ac ligula posuere maximus. Sed vel pellentesque quam. Praesent massa libero, fermentum a ultricies sed, volutpat id lorem.
        \nMaecenas sagittis turpis non nisi egestas, in dignissim urna vulputate. Phasellus vehicula enim a sapien bibendum rutrum. Fusce dapibus massa id magna accumsan, sed rutrum lorem commodo. Etiam faucibus in orci iaculis consequat. In porta nibh id nibh sodales commodo. In auctor ipsum gravida, scelerisque enim quis, consequat tellus. Vivamus vitae ipsum non diam vulputate volutpat. Suspendisse aliquam felis convallis, tempor felis vel, venenatis purus.
        \nAenean odio mi, varius et tempus sit amet, finibus at ipsum. Donec elementum at felis quis dictum. Pellentesque luctus tortor eu nunc sodales, et rhoncus metus congue. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla varius ac sem sed molestie. Nam sed tempor justo. Curabitur laoreet turpis nec suscipit bibendum. Nulla accumsan tincidunt ante, vel sagittis urna vulputate in. Donec in augue nibh. Phasellus sodales nibh tincidunt elementum elementum. Aliquam ac elementum elit. Vestibulum sed est nibh. Suspendisse rutrum eget sem id ultricies. Praesent sit amet elementum est. Proin ac nisi nec justo mattis condimentum et sed urna.
    </string>
    <string name="tnc_readandAccept">I read and accept</string>
    <string name="tnc_ageAccept">I am 18 or above</string>
    <string name="tnc_Agree"> AGREE</string>

    <string name="alert_email">Enter a valid Email</string>
    <string name="alert_pwd">Enter a password</string>
    <string name="alert_pwdnotmatch">Passwords don\'t match</string>
    <string name="alert_pwdlength">Password should be more than 6 characters!</string>

    <string name="txt_forgotpwd_ok">OK</string>
    <string name="txt_forgotpwd_cancel">CANCEL</string>
    <string name="txt_forgotpwd_dialogTitle">Forgot Password</string>
    <string name="txt_alert_user_namepwd_err">Oops! Sorry! UserName/Password not found! Please check! </string>
    <string name="txt_alert_user_response_err">Authentication Failed! </string>
    <string name="txt_alert_tnc_chkbox_select">Click on the check boxes! </string>
    <string name="txt_alert_check_internet_status">No Internet Access!Check your Network Settings!</string>
    <string name="title_activity_maps">Location</string>


    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <string name="txt_userprof_name">Name</string>
    <string name="txt_userprof_gender">Gender</string>
    <string name="txt_userprof_gender_male">MALE</string>
    <string name="txt_userprof_gender_female">FEMALE</string>
    <string name="txt_userprof_location">Location</string>
    <string name="txt_userprof_distance">Distance to Share &amp; Receive the posts </string>
    <string name="btnTxt_userprof_save">SAVE</string>
    <string name="txt_tv_userprof_cookskill">Cooking Sill</string>
    <string name="txt_tv_userprof_cookskill_begin">Beginner</string>
    <string name="txt_tv_userprof_cookskill_mid">Mid-level</string>
    <string name="txt_tv_userprof_cookskill_chef">Chef</string>
    <string name="txt_tv_userprof_foodpref">Food Preference</string>
    <string name="txt_tv_userprof_foodpref_v">Vegetarian</string>
    <string name="txt_tv_userprof_foodpref_nv">Non-Vegetarian</string>
    <string name="txt_tv_userprof_foodpref_both">Both</string>
    <string name="txt_tv_userprof_Hobby">Hobbies</string>
    <string name="txt_tv_userprof_favfood">Favourite Foods</string>
    <string name="txt_tv_userprof_kitpict">Kitchen Picture</string>
    <string name="txt_btn_finish">DONE</string>
    <string name="txt_label_hobby">HOBBIES</string>
    <string name="txt_label_favfood">FAVOURITE FOOD</string>

    <string name="txt_label_operation_failed">Action Failed!</string>
    <string name="txt_fill_operation_failed">Please fill all the fields</string>
</resources>
