<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundplain_image">

    <android.support.constraint.ConstraintLayout
        android:layout_width="314dp"
        android:layout_height="223dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193"
        >

        <!--Dummy layout added to take auto focus off the edit text-->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:text="@string/txt_forgotpwd_dialogTitle"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <EditText
            android:id="@+id/txt_forgotpwd_email"
            android:layout_width="289dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/light_colour"
            android:ems="15"
            android:hint="@string/txt_login_email"
            android:inputType="textPersonName"
            android:textColor="@color/light_colour"
            android:textColorHint="@drawable/edittextselector"
            android:textCursorDrawable="@color/light_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428">

        </EditText>

        <Button
            android:id="@+id/btn_forgotpassword_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/border_loginbtn"
            android:elevation="12dp"
            android:text="@string/txt_forgotpwd_ok"
            android:textColor="@color/light_colour"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.404"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_forgotpwd_email" />


        <!--<Button
            android:id="@+id/"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/round_button_background"
            android:gravity="center_vertical|center_horizontal"
            android:text="X"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="354dp"
            tools:layout_editor_absoluteY="3dp" /> -->
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_forgotpassword_cancel"
        android:layout_width="27dp"
        android:layout_height="26dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_background"
        android:gravity="center_vertical|center_horizontal"
        android:text="X"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

</android.support.constraint.ConstraintLayout>